--- a/pages/15611.html
+++ b/pages/15611.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -290,12 +290,10 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -308,9 +306,103 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <h2 id='idea'>Idea</h2>
+    <div class='rightHandSide'>
+<div class='toc clickDown' tabindex='0'>
+<h3 id='context'>Context</h3>
 
-<p><a class='existingWikiWord' href='/nlab/show/Non-Euclidean+geometry'>non-Euclidean geometry</a> for positive curvature.</p>
+<h4 id='riemannian_geometry'>Riemannian geometry</h4>
+
+<div class='hide'>
+<p><strong><a class='existingWikiWord' href='/nlab/show/Riemannian+geometry'>Riemannian geometry</a></strong></p>
+
+<h2 id='basic_definitions'>Basic definitions</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Riemannian+manifold'>Riemannian manifold</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/metric+space'>metric</a>, <a class='existingWikiWord' href='/nlab/show/isometry'>isometry</a>, <a class='existingWikiWord' href='/nlab/show/isometry+group'>isometry group</a></li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/moduli+space+of+Riemannian+metrics'>moduli space of Riemannian metrics</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/pseudo-Riemannian+manifold'>pseudo-Riemannian manifold</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/smooth+Lorentzian+space'>Lorentzian manifold</a>, <a class='existingWikiWord' href='/nlab/show/spacetime'>spacetime</a></li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/geodesic'>geodesic</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/geodesic+convexity'>geodesic convexity</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/geodesic+flow'>geodesic flow</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Levi-Civita+connection'>Levi-Civita connection</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/Riemann+curvature'>Riemann curvature</a>, <a class='existingWikiWord' href='/nlab/show/torsion+of+a+metric+connection'>torsion of a metric connection</a></li>
+</ul>
+</li>
+</ul>
+
+<h2 id='further_concepts'>Further concepts</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Hodge+star+operator'>Hodge inner product</a>, <a class='existingWikiWord' href='/nlab/show/Hodge+star+operator'>Hodge star operator</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/gradient'>gradient</a>, <a class='existingWikiWord' href='/nlab/show/gradient+flow'>gradient flow</a></p>
+</li>
+</ul>
+
+<h2 id='theorems'>Theorems</h2>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/Poincar%C3%A9+conjecture'>Poincaré conjecture</a>-theorem</li>
+</ul>
+
+<h2 id='applications'>Applications</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/gravity'>gravity</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/Einstein-Hilbert+action'>Einstein-Hilbert action</a>, <a class='existingWikiWord' href='/nlab/show/Einstein+equation'>Einstein equations</a>, <a class='existingWikiWord' href='/nlab/show/supergravity'>supergravity</a></li>
+</ul>
+</li>
+</ul>
+<div>
+<p>
+  <a href='/nlab/edit/Riemannian+geometry+-+contents'>Edit this sidebar</a>
+</p>
+</div></div>
+</div>
+</div>
+
+<h1 id='contents'>Contents</h1>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
+<h2 id='idea'>Idea</h2>
+
+<p><a class='existingWikiWord' href='/nlab/show/Non-Euclidean+geometry'>non-Euclidean geometry</a> for <a class='existingWikiWord' href='/nlab/show/constant+function'>constant</a> <a class='existingWikiWord' href='/nlab/show/positive+number'>positive</a> <a class='existingWikiWord' href='/nlab/show/sectional+curvature'>sectional curvature</a>.</p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 <table><thead><tr><th><a class='existingWikiWord' href='/nlab/show/synthetic+geometry'>synthetic geometry</a></th></tr></thead><tbody><tr><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/Euclidean+geometry'>Euclidean geometry</a></td></tr>
@@ -318,7 +410,13 @@ margin-left: 0em;
 <tr><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/elliptic+geometry'>elliptic geometry</a></td></tr>
 </tbody></table>
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/trigonometry'>trigonometry</a></li>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/trigonometry'>trigonometry</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/spherical+space+form'>spherical space form</a></p>
+</li>
 </ul>
 
 <h2 id='references'>References</h2>
@@ -329,19 +427,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on September 15, 2015 14:32:50 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (147.231.89.106)
+  <p>
+  Last revised on April 25, 2018 at 03:25:45.
+  See the <a href="https://ncatlab.org/nlab/history/elliptic geometry" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/elliptic+geometry" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/elliptic+geometry/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/elliptic+geometry" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/elliptic+geometry" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/elliptic+geometry" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/elliptic+geometry/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/elliptic+geometry" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/elliptic+geometry" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/elliptic geometry/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/elliptic+geometry" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/elliptic+geometry" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/elliptic+geometry" id="view_source" rel="nofollow">Source</a>
