--- a/pages/10647.html
+++ b/pages/10647.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -290,12 +290,10 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -409,12 +407,13 @@ margin-left: 0em;
 <p>A <a class='existingWikiWord' href='/nlab/show/spacetime'>spacetime</a> with vanishing Ricci curvature is also called <em>Ricci flat</em>.</p>
 
 <h2 id='related_concepts'>Related concepts</h2>
-
+<table><thead><tr><th><a class='existingWikiWord' href='/nlab/show/curvature'>curvature</a> in <a class='existingWikiWord' href='/nlab/show/Riemannian+geometry'>Riemannian geometry</a></th></tr></thead><tbody><tr><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/Riemann+curvature'>Riemann curvature</a></td></tr>
+<tr><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/Ricci+curvature'>Ricci curvature</a></td></tr>
+<tr><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/scalar+curvature'>scalar curvature</a></td></tr>
+<tr><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/sectional+curvature'>sectional curvature</a></td></tr>
+<tr><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/p-curvature'>p-curvature</a></td></tr>
+</tbody></table>
 <ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/scalar+curvature'>scalar curvature</a></p>
-</li>
-
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/Einstein-Hilbert+action'>Einstein-Hilbert action</a></p>
 </li>
@@ -447,19 +446,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on November 11, 2016 13:08:52 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (78.45.5.227)
+  <p>
+  Last revised on April 25, 2018 at 03:16:55.
+  See the <a href="https://ncatlab.org/nlab/history/Ricci curvature" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Ricci+curvature" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Ricci+curvature/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Ricci+curvature" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Ricci+curvature" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/Ricci+curvature" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Ricci+curvature/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Ricci+curvature" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Ricci+curvature" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/Ricci curvature/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/Ricci+curvature" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/Ricci+curvature" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/Ricci+curvature" id="view_source" rel="nofollow">Source</a>
