--- a/pages/19409.html
+++ b/pages/19409.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      p-curvature in nLab
+      curvature in Riemannian geometry -- table in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      p-curvature
+      curvature in Riemannian geometry -- table
   </h1>
 
 
@@ -292,7 +292,7 @@ margin-left: 0em;
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8495/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -306,73 +306,32 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_entries'>Related entries</a></li><li><a href='#references'>References</a><ul><li><a href='#InRiemannianGeometry'>In Riemannian geometry</a></li><li><a href='#in_algebraic_geometry'>In algebraic geometry</a></li></ul></li></ul></div>
-<h2 id='idea'>Idea</h2>
-
-<p>In <a class='existingWikiWord' href='/nlab/show/Riemannian+geometry'>Riemannian geometry</a> the term <em><math class='maruku-mathml' display='inline' id='mathml_0d5a4bcb7b32d29a13c721f4524ec079a2efda4c_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>p</mi></mrow><annotation encoding='application/x-tex'>p</annotation></semantics></math>-curvature</em> (<a href='#Labbi97'>Labbi 97</a>) refers to a generalization of the <a class='existingWikiWord' href='/nlab/show/scalar+curvature'>scalar curvature</a>.</p>
-
-<h2 id='related_entries'>Related entries</h2>
-<table><thead><tr><th><a class='existingWikiWord' href='/nlab/show/curvature'>curvature</a> in <a class='existingWikiWord' href='/nlab/show/Riemannian+geometry'>Riemannian geometry</a></th></tr></thead><tbody><tr><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/Riemann+curvature'>Riemann curvature</a></td></tr>
+    <table><thead><tr><th><a class='existingWikiWord' href='/nlab/show/curvature'>curvature</a> in <a class='existingWikiWord' href='/nlab/show/Riemannian+geometry'>Riemannian geometry</a></th></tr></thead><tbody><tr><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/Riemann+curvature'>Riemann curvature</a></td></tr>
 <tr><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/Ricci+curvature'>Ricci curvature</a></td></tr>
 <tr><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/scalar+curvature'>scalar curvature</a></td></tr>
 <tr><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/sectional+curvature'>sectional curvature</a></td></tr>
 <tr><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/p-curvature'>p-curvature</a></td></tr>
 </tbody></table>
-<ul>
-<li><a class='existingWikiWord' href='/nlab/show/Stolz+conjecture'>Stolz conjecture</a></li>
-</ul>
-
-<h2 id='references'>References</h2>
-
-<h3 id='InRiemannianGeometry'>In Riemannian geometry</h3>
-
-<p>The concept was introduced in</p>
-
-<ul>
-<li id='Labbi97'><a class='existingWikiWord' href='/nlab/show/Mohammed+Labbi'>Mohammed Labbi</a>, <em>Stability under surgeries of the <math class='maruku-mathml' display='inline' id='mathml_0d5a4bcb7b32d29a13c721f4524ec079a2efda4c_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>p</mi></mrow><annotation encoding='application/x-tex'>p</annotation></semantics></math>-curvature positivity and manifolds with positive Einstein tensor</em>, Annals of Global Analysis and Geometry, 15 no 4, 299-312 (1997). (<a href='http://streaming.ictp.trieste.it/preprints/P/96/097.pdf'>pdf</a>)</li>
-</ul>
-
-<p>Further discussion includes</p>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Mohammed+Labbi'>Mohammed Labbi</a>, <em>Manifolds with positive second Gauss-Bonnet curvature</em>, Pacific Journal of Math. Vol. 227, No. 2, 295-310, (2006) (<a href='http://msp.org/pjm/2006/227-2/pjm-v227-n2-p04-s.pdf'>pdf</a>)</p>
-</li>
-
-<li>
-<p>Boris Botvinnik, <a class='existingWikiWord' href='/nlab/show/Mohammed+Labbi'>Mohammed Labbi</a>, <em>Highly connected manifolds of positive <math class='maruku-mathml' display='inline' id='mathml_0d5a4bcb7b32d29a13c721f4524ec079a2efda4c_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>p</mi></mrow><annotation encoding='application/x-tex'>p</annotation></semantics></math>-curvature</em>, Trans. Amer. Math. Soc. 366 (2014), 3405-3424 (<a href='http://arxiv.org/abs/1201.1849'>arXiv:1201.1849</a>, <a href='http://www.ams.org/journals/tran/2014-366-07/S0002-9947-2014-05939-4/'>publisher</a>)</p>
-</li>
-</ul>
-
-<h3 id='in_algebraic_geometry'>In algebraic geometry</h3>
-
-<ul>
-<li>Brian Osserman, <em>Connections, curvature and <math class='maruku-mathml' display='inline' id='mathml_0d5a4bcb7b32d29a13c721f4524ec079a2efda4c_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>p</mi></mrow><annotation encoding='application/x-tex'>p</annotation></semantics></math>-curvature</em> (<a href='https://www.math.ucdavis.edu/~osserman/math/connections.pdf'>pdf</a>)</li>
-</ul>
-
-<p>
-</p>
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on April 25, 2018 at 03:17:31.
-  See the <a href="https://ncatlab.org/nlab/history/p-curvature" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Created on April 25, 2018 at 03:14:19.
+  See the <a href="https://ncatlab.org/nlab/history/curvature in Riemannian geometry -- table" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/p-curvature" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/p-curvature/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/p-curvature" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/p-curvature" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  | <a href="https://ncatlab.org/nlab/show/p-curvature/cite" style="color: black">Cite</a>
+  <a href="/nlab/edit/curvature+in+Riemannian+geometry+--+table" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  | <a href="https://ncatlab.org/nlab/show/curvature in Riemannian geometry -- table/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
-    <a href="/nlab/print/p-curvature" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/curvature+in+Riemannian+geometry+--+table" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/p-curvature" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/curvature+in+Riemannian+geometry+--+table" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/p-curvature" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/curvature+in+Riemannian+geometry+--+table" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
