--- a/pages/4952.html
+++ b/pages/4952.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -290,12 +290,10 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -404,8 +402,8 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#definition'>Definition</a></li><li><a href='#properties'>Properties</a></li><li><a href='#related_concepts'>Related concepts</a></li></ul></div>
 <h2 id='definition'>Definition</h2>
 
-<p>For <math class='maruku-mathml' display='inline' id='mathml_f46684a7d2b32eea845af527876d38357e9f369d_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>X</mi><mo>,</mo><mi>g</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(X,g)</annotation></semantics></math> a <a class='existingWikiWord' href='/nlab/show/Riemannian+manifold'>Riemannian manifold</a> let <math class='maruku-mathml' display='inline' id='mathml_f46684a7d2b32eea845af527876d38357e9f369d_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mo>∇</mo> <mi>g</mi></msub></mrow><annotation encoding='application/x-tex'>\nabla_{g}</annotation></semantics></math> be the corresponding <a class='existingWikiWord' href='/nlab/show/Levi-Civita+connection'>Levi-Civita connection</a>. The <strong>Riemann curvature</strong> <math class='maruku-mathml' display='inline' id='mathml_f46684a7d2b32eea845af527876d38357e9f369d_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>R</mi> <mi>g</mi></msub></mrow><annotation encoding='application/x-tex'>R_g</annotation></semantics></math> of <math class='maruku-mathml' display='inline' id='mathml_f46684a7d2b32eea845af527876d38357e9f369d_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>X</mi><mo>,</mo><mi>g</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(X,g)</annotation></semantics></math> is the <a class='existingWikiWord' href='/nlab/show/curvature'>curvature</a> <math class='maruku-mathml' display='inline' id='mathml_f46684a7d2b32eea845af527876d38357e9f369d_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>F</mi> <mrow><msub><mo>∇</mo> <mi>g</mi></msub></mrow></msub></mrow><annotation encoding='application/x-tex'>F_{\nabla_g}</annotation></semantics></math> of <math class='maruku-mathml' display='inline' id='mathml_f46684a7d2b32eea845af527876d38357e9f369d_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mo>∇</mo> <mi>g</mi></msub></mrow><annotation encoding='application/x-tex'>\nabla_g</annotation></semantics></math>:</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_f46684a7d2b32eea845af527876d38357e9f369d_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>R</mi> <mi>g</mi></msub><mo>:</mo><mo>=</mo><msub><mi>F</mi> <mrow><msub><mo>∇</mo> <mi>g</mi></msub></mrow></msub><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
+<p>For <math class='maruku-mathml' display='inline' id='mathml_e37d114beed7d5290fc6fce841cb071a601a9be1_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>X</mi><mo>,</mo><mi>g</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(X,g)</annotation></semantics></math> a <a class='existingWikiWord' href='/nlab/show/Riemannian+manifold'>Riemannian manifold</a> let <math class='maruku-mathml' display='inline' id='mathml_e37d114beed7d5290fc6fce841cb071a601a9be1_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mo>∇</mo> <mi>g</mi></msub></mrow><annotation encoding='application/x-tex'>\nabla_{g}</annotation></semantics></math> be the corresponding <a class='existingWikiWord' href='/nlab/show/Levi-Civita+connection'>Levi-Civita connection</a>. The <strong>Riemann curvature</strong> <math class='maruku-mathml' display='inline' id='mathml_e37d114beed7d5290fc6fce841cb071a601a9be1_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>R</mi> <mi>g</mi></msub></mrow><annotation encoding='application/x-tex'>R_g</annotation></semantics></math> of <math class='maruku-mathml' display='inline' id='mathml_e37d114beed7d5290fc6fce841cb071a601a9be1_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>X</mi><mo>,</mo><mi>g</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(X,g)</annotation></semantics></math> is the <a class='existingWikiWord' href='/nlab/show/curvature'>curvature</a> <math class='maruku-mathml' display='inline' id='mathml_e37d114beed7d5290fc6fce841cb071a601a9be1_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>F</mi> <mrow><msub><mo>∇</mo> <mi>g</mi></msub></mrow></msub></mrow><annotation encoding='application/x-tex'>F_{\nabla_g}</annotation></semantics></math> of <math class='maruku-mathml' display='inline' id='mathml_e37d114beed7d5290fc6fce841cb071a601a9be1_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mo>∇</mo> <mi>g</mi></msub></mrow><annotation encoding='application/x-tex'>\nabla_g</annotation></semantics></math>:</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_e37d114beed7d5290fc6fce841cb071a601a9be1_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>R</mi> <mi>g</mi></msub><mo>:</mo><mo>=</mo><msub><mi>F</mi> <mrow><msub><mo>∇</mo> <mi>g</mi></msub></mrow></msub><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
   R_g := F_{\nabla_g}
   \,.
 
@@ -415,7 +413,12 @@ margin-left: 0em;
 <p>(…)</p>
 
 <h2 id='related_concepts'>Related concepts</h2>
-
+<table><thead><tr><th><a class='existingWikiWord' href='/nlab/show/curvature'>curvature</a> in <a class='existingWikiWord' href='/nlab/show/Riemannian+geometry'>Riemannian geometry</a></th></tr></thead><tbody><tr><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/Riemann+curvature'>Riemann curvature</a></td></tr>
+<tr><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/Ricci+curvature'>Ricci curvature</a></td></tr>
+<tr><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/scalar+curvature'>scalar curvature</a></td></tr>
+<tr><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/sectional+curvature'>sectional curvature</a></td></tr>
+<tr><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/p-curvature'>p-curvature</a></td></tr>
+</tbody></table>
 <ul>
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/torsion+of+a+metric+connection'>torsion of a metric connection</a></p>
@@ -430,7 +433,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Ricci+curvature'>Ricci tensor</a>, <a class='existingWikiWord' href='/nlab/show/scalar+curvature'>scalar curvature</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/Ricci+curvature'>Ricci tensor</a></p>
 </li>
 
 <li>
@@ -454,19 +457,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on March 18, 2015 15:04:19 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (80.92.246.195)
+  <p>
+  Last revised on April 25, 2018 at 03:16:44.
+  See the <a href="https://ncatlab.org/nlab/history/Riemann curvature" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Riemann+curvature" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Riemann+curvature/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/Riemann+curvature" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Riemann+curvature" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/Riemann+curvature" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Riemann+curvature/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/Riemann+curvature" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Riemann+curvature" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/Riemann curvature/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/Riemann+curvature" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/Riemann+curvature" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/Riemann+curvature" id="view_source" rel="nofollow">Source</a>
