--- a/pages/1370.html
+++ b/pages/1370.html
@@ -290,12 +290,10 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -314,13 +312,13 @@ margin-left: 0em;
 
 <p>Joyal promoted <a class='existingWikiWord' href='/nlab/show/quasi-category'>quasi-categories</a>, greatly extending their theory, as a basis for <a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-category+theory'>(∞,1)-category theory</a>.</p>
 
-<p>Joyal has contributed to the <math class='maruku-mathml' display='inline' id='mathml_f16256f3a89bdbd9327d2a5464dc43210903f2e6_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab as ‘joyal’; he is also beginning a new project at <a class='existingWikiWord' href='/joyalscatlab/published/HomePage' title='joyalscatlab'>joyalscatlab</a>.</p>
+<p>Joyal has contributed to the <math class='maruku-mathml' display='inline' id='mathml_929fab875a91df63621e1dc38ee102746b80e3ee_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab as ‘joyal’; he is also beginning a new project at <a class='existingWikiWord' href='/joyalscatlab/published/HomePage' title='joyalscatlab'>joyalscatlab</a>.</p>
 
-<p><a href='http://www.professeurs.uqam.ca/pages/joyal.andre.htm'>webpage</a>, <a href='http://en.wikipedia.org/wiki/Andr%C3%A9_Joyal'>wikipedia</a></p>
+<p><a href='http://professeurs.uqam.ca/professeur?c=joyal.andre'>webpage</a>, <a href='http://en.wikipedia.org/wiki/Andr%C3%A9_Joyal'>wikipedia</a></p>
 
 <ul>
 <li>
-<p>A. Joyal, M. Tierney, <em>An extension of the Galois theory of Grothendieck</em>, Mem. Amer. Math. Soc. <strong>51</strong> (1984), no. 309, vii+71 pp. (historical <math class='maruku-mathml' display='inline' id='mathml_f16256f3a89bdbd9327d2a5464dc43210903f2e6_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>lab note: according to MR756176 (86d:18002) featured review by <a class='existingWikiWord' href='/nlab/show/Peter+Johnstone'>Peter Johnstone</a>, the main results of this monograph were obtained by the authors around 1978-1979, typed version circulated from 1982, and the results influenced the field much before the actual publication)</p>
+<p>A. Joyal, M. Tierney, <em>An extension of the Galois theory of Grothendieck</em>, Mem. Amer. Math. Soc. <strong>51</strong> (1984), no. 309, vii+71 pp. (historical <math class='maruku-mathml' display='inline' id='mathml_929fab875a91df63621e1dc38ee102746b80e3ee_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>lab note: according to MR756176 (86d:18002) featured review by <a class='existingWikiWord' href='/nlab/show/Peter+Johnstone'>Peter Johnstone</a>, the main results of this monograph were obtained by the authors around 1978-1979, typed version circulated from 1982, and the results influenced the field much before the actual publication)</p>
 </li>
 
 <li>
@@ -380,7 +378,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p>A. Joyal, <em>Disks, duality and <math class='maruku-mathml' display='inline' id='mathml_f16256f3a89bdbd9327d2a5464dc43210903f2e6_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Θ</mi></mrow><annotation encoding='application/x-tex'>\Theta</annotation></semantics></math>-categories</em>, preprint (1997) (contains an original definition of a weak <math class='maruku-mathml' display='inline' id='mathml_f16256f3a89bdbd9327d2a5464dc43210903f2e6_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>-category: for a short account see Leinster’s <a href='http://arxiv.org/abs/math.CT/0305049'>book</a>, 10.2).</p>
+<p>A. Joyal, <em>Disks, duality and <math class='maruku-mathml' display='inline' id='mathml_929fab875a91df63621e1dc38ee102746b80e3ee_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Θ</mi></mrow><annotation encoding='application/x-tex'>\Theta</annotation></semantics></math>-categories</em>, preprint (1997) (contains an original definition of a weak <math class='maruku-mathml' display='inline' id='mathml_929fab875a91df63621e1dc38ee102746b80e3ee_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>-category: for a short account see Leinster’s <a href='http://arxiv.org/abs/math.CT/0305049'>book</a>, 10.2).</p>
 </li>
 
 <li>
@@ -403,19 +401,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on December 20, 2014 13:14:50 
-  by <a class="existingWikiWord" href="/nlab/show/Tim+Porter">Tim Porter</a>
-  (127.0.0.1)
+  <p>
+  Last revised on April 25, 2018 at 09:02:11.
+  See the <a href="https://ncatlab.org/nlab/history/Andre Joyal" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Andre+Joyal" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Andre+Joyal/22" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(22 revisions)</span> | <a href="/nlab/show/diff/Andre+Joyal" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Andre+Joyal" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/Andre+Joyal" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Andre+Joyal/23" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(23 revisions)</span> | <a href="/nlab/show/diff/Andre+Joyal" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Andre+Joyal" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/Andre Joyal/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/Andre+Joyal" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/Andre+Joyal" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/Andre+Joyal" id="view_source" rel="nofollow">Source</a>
