--- a/pages/16391.html
+++ b/pages/16391.html
@@ -290,12 +290,10 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -378,7 +376,7 @@ margin-left: 0em;
 <p><a class='existingWikiWord' href='/nlab/show/super+Lie+algebra'>super Lie algebra</a></p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/super+Poincare+Lie+algebra'>super Poincare Lie algebra</a></li>
+<li><a class='existingWikiWord' href='/nlab/show/super+Poincar%C3%A9+Lie+algebra'>super Poincare Lie algebra</a></li>
 </ul>
 </li>
 
@@ -473,7 +471,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/super+Poincare+Lie+algebra'>super Poincare Lie algebra</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/super+Poincar%C3%A9+Lie+algebra'>super Poincare Lie algebra</a></p>
 </li>
 
 <li>
@@ -555,10 +553,14 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a><ul><li><a href='#general'>General</a></li><li><a href='#in_dimension_'>In dimension <math class='maruku-mathml' display='inline' id='mathml_e49910d4e256c00ee2d603868b72b929b61c57cd_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>6</mn><mo>=</mo><mn>5</mn><mo>+</mo><mn>1</mn></mrow><annotation encoding='application/x-tex'>6 = 5+1</annotation></semantics></math></a></li></ul></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#classification'>Classification</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a><ul><li><a href='#general'>General</a></li><li><a href='#in_dimension_'>In dimension <math class='maruku-mathml' display='inline' id='mathml_18da240a14a3a542964db12aa07caa14ecba149e_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>6</mn><mo>=</mo><mn>5</mn><mo>+</mo><mn>1</mn></mrow><annotation encoding='application/x-tex'>6 = 5+1</annotation></semantics></math></a></li></ul></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
 <p>The joint generalization of <a class='existingWikiWord' href='/nlab/show/conformal+geometry'>conformal geometry</a> and <a class='existingWikiWord' href='/nlab/show/supergeometry'>supergeometry</a>.</p>
+
+<h2 id='classification'>Classification</h2>
+
+<p>See at <em><a href='supersymmetry#ClassificationSuperconformal'>Supersymmetry – Classification of superconformal algebras</a></em></p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
@@ -598,17 +600,17 @@ margin-left: 0em;
 </li>
 </ul>
 
-<h3 id='in_dimension_'>In dimension <math class='maruku-mathml' display='inline' id='mathml_e49910d4e256c00ee2d603868b72b929b61c57cd_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>6</mn><mo>=</mo><mn>5</mn><mo>+</mo><mn>1</mn></mrow><annotation encoding='application/x-tex'>6 = 5+1</annotation></semantics></math></h3>
+<h3 id='in_dimension_'>In dimension <math class='maruku-mathml' display='inline' id='mathml_18da240a14a3a542964db12aa07caa14ecba149e_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>6</mn><mo>=</mo><mn>5</mn><mo>+</mo><mn>1</mn></mrow><annotation encoding='application/x-tex'>6 = 5+1</annotation></semantics></math></h3>
 
-<p>Discussion of the superconformal symmetry group, the <a class='existingWikiWord' href='/nlab/show/orthosymplectic+super+Lie+algebra'>orthosymplectic supergroup</a> <math class='maruku-mathml' display='inline' id='mathml_e49910d4e256c00ee2d603868b72b929b61c57cd_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>OSp</mi><mo stretchy='false'>(</mo><msup><mn>8</mn> <mo>*</mo></msup><mo>,</mo><mn>2</mn><mi>N</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>OSp(8^\ast,2N)</annotation></semantics></math>, includes</p>
+<p>Discussion of the superconformal symmetry group, the <a class='existingWikiWord' href='/nlab/show/orthosymplectic+super+Lie+algebra'>orthosymplectic supergroup</a> <math class='maruku-mathml' display='inline' id='mathml_18da240a14a3a542964db12aa07caa14ecba149e_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>OSp</mi><mo stretchy='false'>(</mo><msup><mn>8</mn> <mo>*</mo></msup><mo>,</mo><mn>2</mn><mi>N</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>OSp(8^\ast,2N)</annotation></semantics></math>, includes</p>
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Sergio+Ferrara'>Sergio Ferrara</a>, Emery Sokatchev, <em>Representations of superconformal algebras in the <math class='maruku-mathml' display='inline' id='mathml_e49910d4e256c00ee2d603868b72b929b61c57cd_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>AdS</mi> <mrow><mn>7</mn><mo stretchy='false'>/</mo><mn>4</mn></mrow></msub><mo stretchy='false'>/</mo><msub><mi>CFT</mi> <mrow><mn>6</mn><mo stretchy='false'>/</mo><mn>3</mn></mrow></msub></mrow><annotation encoding='application/x-tex'>AdS_{7/4}/CFT_{6/3}</annotation></semantics></math> correspondence</em>, J.Math.Phys. 42 (2001) 3015-3026 (<a href='http://arxiv.org/abs/hep-th/0010117'>arXiv:hep-th/0010117</a>)</p>
+<p><a class='existingWikiWord' href='/nlab/show/Sergio+Ferrara'>Sergio Ferrara</a>, Emery Sokatchev, <em>Representations of superconformal algebras in the <math class='maruku-mathml' display='inline' id='mathml_18da240a14a3a542964db12aa07caa14ecba149e_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>AdS</mi> <mrow><mn>7</mn><mo stretchy='false'>/</mo><mn>4</mn></mrow></msub><mo stretchy='false'>/</mo><msub><mi>CFT</mi> <mrow><mn>6</mn><mo stretchy='false'>/</mo><mn>3</mn></mrow></msub></mrow><annotation encoding='application/x-tex'>AdS_{7/4}/CFT_{6/3}</annotation></semantics></math> correspondence</em>, J.Math.Phys. 42 (2001) 3015-3026 (<a href='http://arxiv.org/abs/hep-th/0010117'>arXiv:hep-th/0010117</a>)</p>
 </li>
 
 <li>
-<p>Murat Gunaydin, Seiji Takemae, <em>Unitary Supermultiplets of <math class='maruku-mathml' display='inline' id='mathml_e49910d4e256c00ee2d603868b72b929b61c57cd_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>OSp</mi><mo stretchy='false'>(</mo><msup><mn>8</mn> <mo>*</mo></msup><mo stretchy='false'>|</mo><mn>4</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>OSp(8^*|4)</annotation></semantics></math> and the <math class='maruku-mathml' display='inline' id='mathml_e49910d4e256c00ee2d603868b72b929b61c57cd_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>AdS</mi> <mn>7</mn></msub><mo stretchy='false'>/</mo><msub><mi>CFT</mi> <mn>6</mn></msub></mrow><annotation encoding='application/x-tex'>AdS_7/CFT_6</annotation></semantics></math> Duality</em>, Nucl.Phys.B578:405-448,2000; Erratum-ibid.B697:399-402,2004 (<a href='http://arxiv.org/abs/hep-th/9910110'>arXiv:hep-th/9910110</a>)</p>
+<p>Murat Gunaydin, Seiji Takemae, <em>Unitary Supermultiplets of <math class='maruku-mathml' display='inline' id='mathml_18da240a14a3a542964db12aa07caa14ecba149e_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>OSp</mi><mo stretchy='false'>(</mo><msup><mn>8</mn> <mo>*</mo></msup><mo stretchy='false'>|</mo><mn>4</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>OSp(8^*|4)</annotation></semantics></math> and the <math class='maruku-mathml' display='inline' id='mathml_18da240a14a3a542964db12aa07caa14ecba149e_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>AdS</mi> <mn>7</mn></msub><mo stretchy='false'>/</mo><msub><mi>CFT</mi> <mn>6</mn></msub></mrow><annotation encoding='application/x-tex'>AdS_7/CFT_6</annotation></semantics></math> Duality</em>, Nucl.Phys.B578:405-448,2000; Erratum-ibid.B697:399-402,2004 (<a href='http://arxiv.org/abs/hep-th/9910110'>arXiv:hep-th/9910110</a>)</p>
 </li>
 </ul>
 
@@ -617,19 +619,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on March 25, 2015 13:01:59 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (195.113.30.252)
+  <p>
+  Last revised on April 25, 2018 at 10:31:03.
+  See the <a href="https://ncatlab.org/nlab/history/superconformal geometry" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/superconformal+geometry" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/superconformal+geometry/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/superconformal+geometry" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/superconformal+geometry" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/superconformal+geometry" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/superconformal+geometry/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/superconformal+geometry" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/superconformal+geometry" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/superconformal geometry/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/superconformal+geometry" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/superconformal+geometry" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/superconformal+geometry" id="view_source" rel="nofollow">Source</a>
