--- a/pages/1788.html
+++ b/pages/1788.html
@@ -317,11 +317,13 @@ margin-left: 0em;
 </blockquote>
 
 <p>So I’m trying “Edit the page anyway”</p>
+
+<p>That worked, now trying with bad cookies restored</p>
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on April 26, 2018 at 10:44:09.
+  Last revised on April 26, 2018 at 11:08:32.
   See the <a href="https://ncatlab.org/nlab/history/Sandbox" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
