--- a/pages/1431.html
+++ b/pages/1431.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -461,7 +461,7 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on April 29, 2018 at 20:55:13.
+  Last revised on April 29, 2018 at 21:03:58.
   See the <a href="https://ncatlab.org/nlab/history/associahedron &gt; K4" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
