--- a/pages/8279.html
+++ b/pages/8279.html
@@ -290,12 +290,10 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/4108/#Item_5" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -319,7 +317,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/salamander+lemma'>salamander lemma</a> <math class='maruku-mathml' display='inline' id='mathml_81cd5528e703da5b426db95192de8f9e9cd92076_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⇒</mo></mrow><annotation encoding='application/x-tex'>\Rightarrow</annotation></semantics></math></p>
+<p><a class='existingWikiWord' href='/nlab/show/salamander+lemma'>salamander lemma</a> <math class='maruku-mathml' display='inline' id='mathml_564ca06f90d0100ce0f2a381e6b55a1b73f4553f_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⇒</mo></mrow><annotation encoding='application/x-tex'>\Rightarrow</annotation></semantics></math></p>
 
 <ul>
 <li>
@@ -327,11 +325,11 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/four+lemma'>four lemma</a> <math class='maruku-mathml' display='inline' id='mathml_81cd5528e703da5b426db95192de8f9e9cd92076_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⇒</mo></mrow><annotation encoding='application/x-tex'>\Rightarrow</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/five+lemma'>five lemma</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/four+lemma'>four lemma</a> <math class='maruku-mathml' display='inline' id='mathml_564ca06f90d0100ce0f2a381e6b55a1b73f4553f_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⇒</mo></mrow><annotation encoding='application/x-tex'>\Rightarrow</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/five+lemma'>five lemma</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/snake+lemma'>snake lemma</a> <math class='maruku-mathml' display='inline' id='mathml_81cd5528e703da5b426db95192de8f9e9cd92076_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⇒</mo></mrow><annotation encoding='application/x-tex'>\Rightarrow</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/connecting+homomorphism'>connecting homomorphism</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/snake+lemma'>snake lemma</a> <math class='maruku-mathml' display='inline' id='mathml_564ca06f90d0100ce0f2a381e6b55a1b73f4553f_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⇒</mo></mrow><annotation encoding='application/x-tex'>\Rightarrow</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/connecting+homomorphism'>connecting homomorphism</a></p>
 </li>
 
 <li>
@@ -423,7 +421,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/chain+map'>chain map</a>, <a class='existingWikiWord' href='/nlab/show/quasi-isomorphism'>quasi-isomorphism</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/chain+map'>chain map</a></p>
 </li>
 
 <li>
@@ -436,9 +434,21 @@ margin-left: 0em;
 <p><a class='existingWikiWord' href='/nlab/show/chain+homology+and+cohomology'>chain homology and cohomology</a></p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/cochain+on+a+simplicial+set'>simplicial homology</a></li>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/quasi-isomorphism'>quasi-isomorphism</a></p>
+</li>
 
-<li><a class='existingWikiWord' href='/nlab/show/generalized+homology'>generalized homology</a></li>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/homological+resolution'>homological resolution</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/cochain+on+a+simplicial+set'>simplicial homology</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/generalized+homology'>generalized homology</a></p>
+</li>
 </ul>
 </li>
 
@@ -648,14 +658,14 @@ margin-left: 0em;
 
 <h2 id='diagram_chases_in_general_abelian_categories'>Diagram chases in general abelian categories</h2>
 
-<p>There are at least five approaches to performing diagram chases in general abelian categories (not assumed to be <a class='existingWikiWord' href='/nlab/show/concrete+category'>concrete</a> like <a class='existingWikiWord' href='/nlab/show/Ab'>Ab</a> or <math class='maruku-mathml' display='inline' id='mathml_81cd5528e703da5b426db95192de8f9e9cd92076_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>R</mi></mrow><annotation encoding='application/x-tex'>R</annotation></semantics></math><a class='existingWikiWord' href='/nlab/show/Mod'>Mod</a>), roughly listed in increasing order of sophistication:</p>
+<p>There are at least five approaches to performing diagram chases in general abelian categories (not assumed to be <a class='existingWikiWord' href='/nlab/show/concrete+category'>concrete</a> like <a class='existingWikiWord' href='/nlab/show/Ab'>Ab</a> or <math class='maruku-mathml' display='inline' id='mathml_564ca06f90d0100ce0f2a381e6b55a1b73f4553f_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>R</mi></mrow><annotation encoding='application/x-tex'>R</annotation></semantics></math><a class='existingWikiWord' href='/nlab/show/Mod'>Mod</a>):</p>
 
 <ol>
 <li>Directly use the universal properties of the objects involved (<a class='existingWikiWord' href='/nlab/show/kernel'>kernels</a>, <a class='existingWikiWord' href='/nlab/show/cokernel'>cokernels</a> etc.).</li>
 
 <li>Use equivalence classes of <a class='existingWikiWord' href='/nlab/show/generalized+element'>generalized elements</a> to mimic naive (element-based) proofs, as detailed at <em><a class='existingWikiWord' href='/nlab/show/element+in+an+abelian+category'>element in an abelian category</a></em>. These can only be used to show properties of already-given morphisms and not to construct morphisms (for example the <a class='existingWikiWord' href='/nlab/show/connecting+homomorphism'>connecting homomorphism</a> of a short exact sequence) by giving their action on elements.</li>
 
-<li>Use genuine generalized elements, see <em><a class='existingWikiWord' href='/nlab/show/element+in+an+abelian+category'>element in an abelian category</a></em>. With these, the naive way of constructing morphisms <math class='maruku-mathml' display='inline' id='mathml_81cd5528e703da5b426db95192de8f9e9cd92076_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi><mo>→</mo><mi>B</mi></mrow><annotation encoding='application/x-tex'>A \to B</annotation></semantics></math> (first showing that for every <math class='maruku-mathml' display='inline' id='mathml_81cd5528e703da5b426db95192de8f9e9cd92076_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>a</mi><mo>∈</mo><mi>A</mi></mrow><annotation encoding='application/x-tex'>a \in A</annotation></semantics></math> there exists a certain <math class='maruku-mathml' display='inline' id='mathml_81cd5528e703da5b426db95192de8f9e9cd92076_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>b</mi><mo>∈</mo><mi>B</mi></mrow><annotation encoding='application/x-tex'>b \in B</annotation></semantics></math>, then showing that this is independent of any choices made) carries over to the general setting.</li>
+<li>Use genuine generalized elements, see <em><a class='existingWikiWord' href='/nlab/show/element+in+an+abelian+category'>element in an abelian category</a></em>. With these, the naive way of constructing morphisms <math class='maruku-mathml' display='inline' id='mathml_564ca06f90d0100ce0f2a381e6b55a1b73f4553f_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi><mo>→</mo><mi>B</mi></mrow><annotation encoding='application/x-tex'>A \to B</annotation></semantics></math> (first showing that for every <math class='maruku-mathml' display='inline' id='mathml_564ca06f90d0100ce0f2a381e6b55a1b73f4553f_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>a</mi><mo>∈</mo><mi>A</mi></mrow><annotation encoding='application/x-tex'>a \in A</annotation></semantics></math> there exists a certain <math class='maruku-mathml' display='inline' id='mathml_564ca06f90d0100ce0f2a381e6b55a1b73f4553f_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>b</mi><mo>∈</mo><mi>B</mi></mrow><annotation encoding='application/x-tex'>b \in B</annotation></semantics></math>, then showing that this is independent of any choices made) carries over to the general setting.</li>
 
 <li>Interpret constructive element-based proofs written in the fragment of <a class='existingWikiWord' href='/nlab/show/regular+logic'>regular logic</a> using categorical semantics, see <em><a class='existingWikiWord' href='/nlab/show/internal+logic'>internal logic</a></em>. The naive way of constructing morphisms works because the “axiom of unique choice” is valid in abelian categories (see <a href='#Johnstone'>Johnstone, Prop. D1.3.12</a>).</li>
 
@@ -697,19 +707,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on June 18, 2017 04:20:43 
-  by <a class="existingWikiWord" href="/nlab/show/Peter+Heinig">Peter Heinig</a>
-  (2003:58:aa24:9a00:cf7:a27a:814:2924)
+  <p>
+  Last revised on April 30, 2018 at 11:47:38.
+  See the <a href="https://ncatlab.org/nlab/history/diagram chasing" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/diagram+chasing" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/diagram+chasing/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/diagram+chasing" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/diagram+chasing" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/diagram+chasing" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/diagram+chasing/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/diagram+chasing" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/diagram+chasing" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/diagram chasing/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/diagram+chasing" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/diagram+chasing" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/diagram+chasing" id="view_source" rel="nofollow">Source</a>
